k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: fastapi
spec:
  type: LoadBalancer
  selector:
    app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: 8080
